Make sure parameter object is passed to handler for path parameters
