# sample/Demo.Domain/Handlers/Accounts/UpdateAccountNameHandler.cs
@@ -1,0 +1,30 @@
+﻿using System.Threading;
+using System.Threading.Tasks;
+using Demo.Api.Generated.Contracts.Accounts;
+
+namespace Demo.Domain.Handlers.Accounts
+{
+    /// <summary>
+    /// Handler for operation request.
+    /// Description: Update name of account.
+    /// Operation: UpdateAccountName.
+    /// Area: Accounts.
+    /// </summary>
+    public class UpdateAccountNameHandler : IUpdateAccountNameHandler
+    {
+        public Task<UpdateAccountNameResult> ExecuteAsync(UpdateAccountNameParameters parameters, CancellationToken cancellationToken = default)
+        {
+            if (parameters is null)
+            {
+                throw new System.ArgumentNullException(nameof(parameters));
+            }
+
+            return InvokeExecuteAsync(parameters, cancellationToken);
+        }
+
+        public async Task<UpdateAccountNameResult> InvokeExecuteAsync(UpdateAccountNameParameters parameters, CancellationToken cancellationToken = default)
+        {
+            throw new System.NotImplementedException();
+        }
+    }
+}
